@@ -52,9 +52,10 @@ Extensions::Extensions()
            << "mkv" << "nsv" << "ram" << "flv"
            << "rm" << "swf"
            << "ts" << "rmvb" << "dvr-ms" << "m2t" << "m2ts" << "mts" << "rec" << "wtv"
-           << "f4v" << "hdmov" << "webm" << "vp8" ;
+           << "f4v" << "hdmov" << "webm" << "vp8"
+           << "bik" << "smk" ;
 
-	_audio << "mp3" << "ogg" << "oga" << "wav" << "wma" <<  "ac3" << "ra" << "ape" << "flac" << "thd" << "mka" << "m4a";
+	_audio << "mp3" << "ogg" << "oga" << "wav" << "wma" <<  "aac" << "ac3" << "dts" << "ra" << "ape" << "flac" << "thd" << "mka" << "m4a";
 
 	_subtitles << "srt" << "sub" << "ssa" << "ass" << "idx" << "txt" << "smi"
                << "rt" << "utf" << "aqt";
